--- a/spring/Aspect_Oriented_Programming/simple_spring_aop/pom.xml
+++ b/spring/Aspect_Oriented_Programming/simple_spring_aop/pom.xml
@@ -11,6 +11,9 @@
 
     <properties>
         <spring.version>5.0.2.RELEASE</spring.version>
+
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
     </properties>
 
     <dependencies>
